fixed overlapping of button on homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,7 +48,7 @@ body{
   left: 50%;
   width:30em;
   height:48em;
-  margin-top: -9em; /*set to a negative number 1/2 of your height*/
+  margin-top: -1em; /*set to a negative number 1/2 of your height*/
   margin-left: -15em; /*set to a negative number 1/2 of your width*/
   border: 1px solid forestgreen;
 }
@@ -65,4 +65,6 @@ body{
 
 .head{
   text-align: center;
+
+  margin: 50px;
 }
